version 0.8 - dd-MMM-yyyy
 . Actions: CallFuncND doesn't leak if reused (issue #336)
 . ParallaxNode: uses world coordinates (issue #373)

version 0.8-beta - 17-Jun-2009
 . Actions: Added BezierBy action (issue #313)
 . Actions: improved performance when running Actions (issue #301)
 . Actions: fixed Repeat skipping when duration not an integer (issue #394)
 . All: removed deprecated classes/methods (issue #326)
 . AtlasSprite: supports flipX and flipY properties (issue #343)
 . BitmapFontAtlas: new features (issue #317)
 . box2d: Integrated box2d physics engine (issue #406)
 . CocosDenshion: new sound engine in experimental (issue #407)
 . CocosNode: actions don't retain the target (issue #150)
 . CocosNode: support real openGL Z vertex (issue #355)
 . CocosNode: faster transforming of local/world coordinates (issue #263)
 . CocosNode: anchorPoint uses normalized coords (0,0) to (1,1) (issue #303)
 . Director: supports PortraitUpsideDown and Right orientation (issue #351)
 . LabelAtlas: don't render in subpixel (issue #135)
 . Menu: All MenuItems supports CocosNodeRGBA protocol (issue #347)
 . Menu: Support for BitmapFontAtlas (or any other Label) (issue #365)
 . Menu: Support for Sprite and AtlasSprite (or any other CocosNodeRGBA node) (issue #383)
 . ParallaxNode: parallax code refactored (issue #358)
 . Particles: Added QuadParticleSystem. renamed ParticleSystem to PointParticleSystem (issue #245)
 . Particles: added support for endSize and endSizeVar (issue #241)
 . Particles: added support for start/end/var spinning (issue #335)
 . Particles: support for World/Local coordinates (issue #241)
 . Primitives: added bezier path support (issue #380)
 . Tests: Added PerformanceParticleTest (issue #331)
 . Tests: Added TouchTest (issue #211, #402)
 . Texture2D: new alias/antialias API (issue #226)
 . Texture2D: supports 16-bit textures RGB4 and RGB5A1 (issue #356)
 . Texture2D: blending mode varies according to texture (issue #125)